Add for chat persistency

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,12 +48,7 @@
       <header>
         <h2>GPA Wizard Chatbot</h2>
       </header>
-      <ul class="chatbox">
-        <li class="chat incoming">
-          <span class = "material-symbols-outlined">smart_toy</span>
-          <p>Welcome to the GPA Wizard interactive chatbot! How may I help you?</p>
-        </li>
-      </ul>
+      <ul class="chatbox"></ul>
       <div class = "messageinput">
         <textarea placeholder="Enter a Message" required></textarea>
         <span id="sendbutton" class = "material-symbols-outlined">send</span>
