--- a/templates/login.html
+++ b/templates/login.html
@@ -2,15 +2,18 @@
 
 {% extends "base.html" %} {% block content %}
 <!-- Title for the page -->
-<h1 class="title">Login</h1>
+<div class="loginWidget">
+<div class="loginContainer">
+
 <!-- Div for the box that the form sits on -->
 <div class="loginBox">
+  <h2 class="loginText">Login</h2>
   <!-- Form that sends an action to auth.login to check if the username and password exist within the database using the POST method -->
   <form action="{{ url_for('auth.login') }}" method="POST" class="login">
     <!-- The class for the username, contains the Username label and the text box for inputting it -->
     <div class="userLogin">
       <label for="username">Username:</label>
-      <input
+      <input class="loginField"
         type="text"
         id="username"
         name="username"
@@ -20,9 +23,9 @@
     </div>
     <br />
     <!-- The class for the password, contains the Password label and the text box for inputting it -->
-    <div class="passLogin">
+    <div class="userLogin">
       <label for="password">Password:</label>
-      <input
+      <input class="loginField"
         type="password"
         id="password"
         name="password"
@@ -31,14 +34,20 @@
       />
     </div>
     <br />
-    <div>
+    <div class="loginButtons">
       <!-- Submit button -->
-      <input type="submit" name="submit" value="Login" />
+      <input class="submitButton" type="submit" name="submit" value="Login" />
+      <h2> No Account?</h2>
       <!-- Link to swap to the register page -->
-      <a class="registerButton" href="{{ url_for( 'auth.register') }}"
-        >No Account? Register Here.</a
+      <a class="submitButton" href="{{ url_for( 'auth.register') }}"
+        >Register Here</a
       >
     </div>
+
   </form>
+</div>
+</div>
+<div class="loginImage">
+</div>
 </div>
 {% endblock %}
