added images to login/register and on the main site

--- a/templates/login.html
+++ b/templates/login.html
@@ -48,6 +48,7 @@
 </div>
 </div>
 <div class="loginImage">
+    <img src="https://i.ibb.co/tKrk0by/img1gpa-03.png" />
 </div>
 </div>
 {% endblock %}
