--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<div class="loginWidget">
+<div class="registerWidget">
     <div class="loginImage"></div>
 <div class="loginContainer">
 
