--- a/static/style.css
+++ b/static/style.css
@@ -153,6 +153,11 @@ h2{
     border-radius: 10px;
 }
 
+.image img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 .text, .image {
     flex: 1;
 }
@@ -178,6 +183,18 @@ h2{
     display: flex;
     width: 100%;
     max-width: 1000px;
+    max-height: 371px;
+    margin: 70px auto;
+    border-radius: 10px; /* Rounded corners */
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+    overflow: hidden; /* Ensure the shadow doesn't overflow */
+}
+
+.registerWidget{
+    display: flex;
+    width: 100%;
+    max-width: 1000px;
+    max-height: 371px;
     margin: 70px auto;
     border-radius: 10px; /* Rounded corners */
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
@@ -186,9 +203,16 @@ h2{
 
 .loginImage{
     flex: 1;
-    background-image: url('https://placehold.co/400x400');
-    background-size: cover;
-    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.loginImage img{
+    width: 100%; /* Let the browser adjust width based on height to maintain aspect ratio */
+    max-width: none; /* Remove any maximum width constraints */
+    height: auto; /* Match the height of the container */
 }
 
 .loginContainer{
