--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <h1 class="mainTitle">GPAWIZARD</h1>
     <div class="widget">
         <div class="image">
-            <img src="https://placehold.co/400x400"/>
+            <img src="https://i.ibb.co/r4Wq3G6/img1gpa.png"/>
         </div>
         <div class="widget-text">
             <h2>About!</h2>
@@ -20,7 +20,7 @@
                 your grades + GPA in a PDF Format!</p>
         </div>
         <div class="image">
-            <img src="https://placehold.co/400x400"/>
+            <img src="https://i.ibb.co/h2kPLLS/img1gpa-02.png"/>
         </div>
     </div>
     <div class="widget bottom-widget" id="helpScreen">
