Add github link

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,9 @@
     <!-- Div for the bottom nav bar -->
     <div class="bottomBar">
       <p class="footer-text">By Kaushal Dabbiru, Tejas Panja, Safwan Hasan</p>
+      <a href="https://github.com/SanixWheee/GPACalc">
+        <img src="{{ url_for('static', filename='github-mark.png') }}">
+      </a>
       <button class = "chatbutton">
         <span class = "material-symbols-outlined">mode_comment</span>
         <span class = "material-symbols-outlined">close</span>
