--- a/templates/register.html
+++ b/templates/register.html
@@ -11,8 +11,8 @@
   <form action="{{ url_for('auth.register') }}" method="POST" class="register">
     <div class="userLogin">
       <label for="username">Username:</label>
-      <label for="username"></label
-      ><input
+      <label for="username"></label>
+      <input class = "loginField"
         type="text"
         id="username"
         name="username"
@@ -23,7 +23,7 @@
     <br />
     <div class="userLogin">
       <label for="password">Password:</label>
-      <input
+      <input class = "loginField"
         type="password"
         id="password"
         name="password"
@@ -34,7 +34,7 @@
     <br />
     <div class="loginButtons">
       <input class="submitButton" type="submit" name="submit" value="Register" />
-      <h2> Already have an Account? </h2>
+      <h3> Already have an Account? </h3>
       <a class="submitButton" href="{{ url_for('auth.login') }}">Log in Here</a>
     </div>
   </form>
