--- a/static/style.css
+++ b/static/style.css
@@ -309,7 +309,7 @@ input[type = submit] {
 .flashes {
   display: flex;
   font-family: 'Roboto Mono', monospace;
-  text-align: center;
+  text-align: justify;
   width: 10vw;
   border-radius: 10px;
   margin: 20px auto 0;
@@ -323,6 +323,7 @@ input[type = submit] {
   padding: 15px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  white-space: nowrap;
 }
 
 .flashes span {
@@ -353,6 +354,7 @@ input[type = submit] {
 .error {
   background-color: red;
 }
+
 /* 
 
 .error {
@@ -471,6 +473,33 @@ input[type = submit] {
   align-items: flex-start;
   margin-top: 25px;
   margin-bottom: 25px;
+}
+
+.leftWidget.visible{
+  display: flex;
+  animation: slideinLeft 1000ms forwards;
+}
+
+.classWidget.visible{
+  background-color: #c2ffdd;
+  width: 300px;
+  border-radius: 15px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  transition: transform 0.3s ease-in-out;
+  flex: 1; /* Add flex: 1 */
+  margin-left: 30px; /* Add margin-left */
+  text-align: center;
+  margin-bottom: 30px;
+  display: block;
+  font-size: 15px;
+  animation: slideinRightClass 1000ms forwards;
+  font-size: 15px;
+}
+
+.bottomWidget.visible{
+  display: flex;
+  animation: slideinRight 1000ms forwards;
 }
 
 @keyframes slideinLeft {
