--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     <link rel = "stylesheet" 
           href = "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
     <script src="{{url_for('static', filename='chatbox.js')}}" defer></script>
+      <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </head>
   <body>
     <!-- Div for the top navigation bar -->
