Change pdf download semantics

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,8 @@
             <p>Step 3: fill out the form and press 'add class'</p>
             <p>Step 4: Repeat steps 3 until you have put all the classes you want</p>
             <p>Step 5: Press 'Download PDF' to download your GPA table</p>
+            <br>
+            <a class="getPDF" href="{{ url_for('static', filename='website-overview.pdf') }}" download="website-overview.pdf">Download Tutorial</a>
         </div>
     </div>
 </div>
