--- a/static/style.css
+++ b/static/style.css
@@ -73,7 +73,7 @@ h3{
   color: black;
   background-color: #9FFFCB;
   padding: 20px;
-  transition: font-size 0.3s, margin-top 0.3s; /* Add smooth transition for font size and margin top */
+  transition: font-size 0.3s, margin-top 0.3s;
 }
 
 .mainTitle.small {
@@ -113,7 +113,7 @@ h3{
     font-size: 17px;
 }
 
-.indexContainer {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -504,7 +504,7 @@ input[type = submit] {
 
 .leftWidget.visible{
     display: flex;
-    /*animation: slideinLeft 250ms forwards;*/
+    animation: slideinLeft 0ms forwards;
 }
 
 .rightWidgets {
@@ -572,7 +572,7 @@ input[type = submit] {
     text-align: center;
     margin-bottom: 30px;
     display: block;
-    /*animation: slideinRightClass 250ms forwards;*/
+    animation: slideinRightClass 0ms forwards;
     font-size: 15px;
 }
 
@@ -604,7 +604,7 @@ input[type = submit] {
 
 .bottomWidget.visible{
     display: flex;
-    animation: /*slideinRight 250ms forwards;*/
+    animation: slideinRight 0ms forwards;
 }
 
 
@@ -624,6 +624,8 @@ input[type = submit] {
   transition: 0.3s ease;
 }
 */
+
+
 .emptyText {
   color: grey;
   font-family: 'Roboto Mono', monospace;
