fixes home page thing?

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% extends "base.html" %}
 {% block content %}
-<div class="indexContainer">
+<div class="container">
     <h1 class="mainTitle">GPAWIZARD</h1>
     <div class="widget">
         <div class="image">
