--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -96,10 +96,10 @@
 
 
 <script>
-    var leftWidget = document.querySelector('.leftWidget');
-    var table = document.querySelector('.tableDiv');
-    var bottomWidget = document.querySelector('.bottomWidget');
-    var classWidget = document.querySelector('.classWidget');
+    const leftWidget = document.querySelector('.leftWidget');
+    const table = document.querySelector('.tableDiv');
+    const bottomWidget = document.querySelector('.bottomWidget');
+    const classWidget = document.querySelector('.classWidget');
 
 
     window.onload = function () {
