Some css for the mages and stuff

--- a/templates/login.html
+++ b/templates/login.html
@@ -48,7 +48,7 @@
 </div>
 </div>
 <div class="loginImage">
-    <img src="https://i.ibb.co/tKrk0by/img1gpa-03.png" />
+    <img src="{{ url_for('static', filename='Review1.jpg') }}" />
 </div>
 </div>
 {% endblock %}
