--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="registerWidget">
-    <div class="loginImage"></div>
+  <div class="loginImage">
+    <img src="{{ url_for('static', filename='Review2.jpg') }}" />
+  </div>
 <div class="loginContainer">
 
 
