Change chatbot header margins

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,8 @@
     <!-- div for the chatbot -->
     <div class="chatbot">
         <header>
-            <h2>GPA Wizard Chatbot</h2>
-            <p style="margin-top: -4px">Powered by OpenAI Assistant Beta V2</p>
+            <h2 style="margin-top: -1px">GPA Wizard Chatbot</h2>
+            <p style="margin-top: -4px; margin-bottom: -1px">Powered by OpenAI Assistant Beta V2</p>
         </header>
         <ul class="chatbox"></ul>
         <div class="messageinput">
